- Writing unit tests for HomeSceneViewController

--- a/The Hitchhiker Prophecy.xcodeproj/xcshareddata/xcschemes/The Hitchhiker Prophecy.xcscheme
+++ b/The Hitchhiker Prophecy.xcodeproj/xcshareddata/xcschemes/The Hitchhiker Prophecy.xcscheme
@@ -27,7 +27,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "01D65F5B249138A30082F8FF"
+            BuildableName = "The Hitchhiker Prophecy.app"
+            BlueprintName = "The Hitchhiker Prophecy"
+            ReferencedContainer = "container:The Hitchhiker Prophecy.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
